--- a/src/component/GameImage.module.css
+++ b/src/component/GameImage.module.css
@@ -1,8 +1,23 @@
-.img {
-  aspect-ratio: 1;
+img {
+  display: block;
   line-height: 0;
+  border-radius: 0.5rem;
+}
+.img {
+  height: 200px;
+  width: 200px;
 }
 
 .gameListHorizontal {
   display: flex;
+  gap: 0.5rem;
+}
+
+p {
+  margin: 0;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
