--- a/src/component/ProductCard.module.css
+++ b/src/component/ProductCard.module.css
@@ -3,6 +3,8 @@ img {
   line-height: 0;
   border-radius: 0.5rem;
   width: 100%;
+  object-fit: contain;
+  aspect-ratio: 1;
 }
 
 p {
@@ -10,7 +12,11 @@ p {
 }
 
 .title {
+  width: 250px;
   font-weight: bold;
   font-size: 1.2rem;
   margin-top: 1rem;
+  text-overflow: ellipsis;
+  white-space: pre;
+  overflow: hidden;
 }
