--- a/src/component/ProductCard.module.css
+++ b/src/component/ProductCard.module.css
@@ -2,7 +2,7 @@ img {
   display: block;
   line-height: 0;
   border-radius: 0.5rem;
-  width: 100%;
+  width: 200px;
   object-fit: contain;
   aspect-ratio: 1;
 }
