--- a/src/component/ProductCard.module.css
+++ b/src/component/ProductCard.module.css
@@ -2,7 +2,10 @@ img {
   display: block;
   line-height: 0;
   border-radius: 0.5rem;
-  width: 200px;
+  /*width: 200px;
+* TODO: this bugs made the product card img width large (default)
+* */
+
   object-fit: contain;
   aspect-ratio: 1;
 }
